# safeagent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: audit.py  config.py  db.py  github_pr.py  llm.py  main.py  models.py  patcher.py  policy.py  sandbox.py  snapshot.py  verifier.py
tests/: test_patch_validation.py
